Change min-height of Carrot to fix margin issues on mobile

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -418,7 +418,7 @@
 }
 
 .ad-slot--carrot {
-    min-height: 250px;
+    min-height: 10px;
     padding: 0;
     margin: 5px $gs-gutter $gs-baseline 0;
 
